Fixed another z-index bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -123,6 +123,7 @@ body {
   height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.7);
+  z-index: 30;
 }
 
 .modal {
